fixed dark mode feature color issue

--- a/src/Components/Project/project.css
+++ b/src/Components/Project/project.css
@@ -10,6 +10,10 @@
   border: 2px #A60067 solid;
 }
 
+.feature-dark {
+  border: 2px #FFA9F9 solid;
+}
+
 .img-light {
   width: 100%;
   border: 1px solid #131B23;
